--- a/_layout/default.html
+++ b/_layout/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
 	"http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
 <head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    <title>{{ page.title }}</title>
    <meta name="author" content="Drew Franklin" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
  
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -26,31 +26,10 @@
 	<div id="main">
 		{{ content }}
 	</div>
-  <div class="footer">
-  </div>
-</div>
- 
+	<div class="footer">
+	</div>
+
 <a href="http://github.com/drewfranklin"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
  
 </body>
 </html>
-
-<!-- <div class="contact">
-  <p>
-    Tom Preston-Werner<br />
-    Cofounder of <a href="http://github.com/">GitHub</a><br />
-    tom@mojombo.com
-  </p>
-</div>
-<div class="contact">
-  <p>
-    <a href="http://github.com/mojombo/">github.com/mojombo</a><br />
-    <a href="http://twitter.com/mojombo/">twitter.com/mojombo</a><br />
-    <a href="http://flickr.com/photos/mojombo/">flickr.com/photos/mojombo</a>
-  </p>
-</div>
-<div class="rss">
-  <a href="http://feeds.feedburner.com/tom-preston-werner">
-    <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-  </a>
-</div> -->
