--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>{{ page.title }}</title>
 	<meta name="author" content="Drew Franklin" />
+	<link href="http://feeds.feedburner.com/drewfranklin/github" rel="alternate" title="Drew Franklin Geeks Out" type="application/atom+xml" />
 	<!-- syntax highlighting CSS -->
 	<link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 	<!-- Homepage CSS -->
