--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,11 @@
 	<link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 	<!-- Homepage CSS -->
 	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
-	<script src="/scripts/jquery.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/scripts/gridlayout.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/scripts/gridcalculator.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="/scripts/gridlayout.js" charset="utf-8"></script>
+	<script type="text/javascript" src="/scripts/gridcalculator.js" charset="utf-8"></script>
+	<script type="text/javascript" src="/scripts/date.format.js" charset="utf-8"></script>
+	<script type="text/javascript" src="/scripts/links.js" charset="utf-8"></script>
 </head>
 <body id="generic">
 	<div id="GridLayout">
@@ -24,6 +26,7 @@
 	</div>
 	<div id="main">
 		{{ content }}
+		<div id="links"></div>
 	</div>
 	<div class="footer">
 	</div>
