--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 <div class="post section">
-	<!-- <div class="post-header">
-			<h1><%= link_to_unless_current post.title, :action => 'show', :id => post %></h1>
-			<p class="date"><%=h post.created.strftime("%B %d %Y") %></p>
-		</div> -->
+	<div class="post-header">
+		<h1>{{post.title}}</h1>
+		<p class="date">{{ post.date | date_to_string }}</p>
+	</div>
 	<div class="post-text">
 		{{ content }}
 	</div>
