--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="post section">
 	<div class="post-header">
-		<h1>{{post.title}}</h1>
-		<p class="date">{{ post.date | date_to_string }}</p>
+		<h1>{{title}}</h1>
+		<p class="date">{{ date | date_to_string }}</p>
 	</div>
 	<div class="post-text">
 		{{ content }}
