--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="post section">
 	<div class="post-header">
 		<h1>{{ page.title }}</h1>
-		<p class="date">{{ page.date | date: "%B %d %Y" }}</p>
+		<p class="date">{{ page.date | date: "%B %d, %Y" }}</p>
 	</div>
 	<div class="post-text">
 		{{ content }}
