--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
 "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>{{ page.title }}</title>
-		<meta name="author" content="Drew Franklin">
-		<link href="http://feeds.feedburner.com/drewfranklin/github" rel="alternate" title="Drew Franklin Geeks Out" type="application/atom+xml">
-		<!-- Homepage CSS -->
-		<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection">
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
-		<script type="text/javascript" src="/scripts/links.js" charset="utf-8"></script>
-	</head>
-	<body id="generic">
-		<div id="header"></div>
-		<div id="main">
-			{{ content }}
-		</div>
-		<div class="footer"></div>
-		<p>
-			<a href="http://github.com/drewfranklin"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-		</p>
-	</body>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>{{ page.title }}</title>
+	<meta name="author" content="Drew Franklin">
+	<link href="http://feeds.feedburner.com/drewfranklin/github" rel="alternate" title="Drew Franklin Geeks Out" type="application/atom+xml">
+	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection">
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="/scripts/links.js" charset="utf-8"></script>
+</head>
+<body>
+	<div id="header"></div>
+	{{ content }}
+	<a href="http://github.com/drewfranklin"><img id="ribbon" src="/images/forkme_right_darkblue.png" alt="Fork me on GitHub"></a>
+</body>
 </html>
