--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,12 @@
 ---
-layout: default
+layout: main
 ---
-
-<div class="post section">
-	<div class="post-header">
-		<h1>{{ page.title }}</h1>
-		<p class="date">{{ page.date | date: "%B %d, %Y" }}</p>
-	</div>
-	<div class="post-text">
+	<div class="post section">
+		<div class="post-header">
+			<h1>{{ page.title }}</h1>
+			<span class="date">{{ page.date | date: "%B %d, %Y" }}</span>
+		</div>
+		<div class="post-text">
 		{{ content }}
+		</div>
 	</div>
-</div>
