moved ribbon style back to link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,6 @@
 <body>
 	<div id="header"></div>
 	{{ content }}
-	<a href="http://github.com/drewfranklin"><img id="ribbon" src="/images/forkme_right_darkblue.png" alt="Fork me on GitHub"></a>
+	<a href="http://github.com/drewfranklin"><img style="position: absolute;top: 0;right: 0;border: 0;" src="/images/forkme_right_darkblue.png" alt="Fork me on GitHub"></a>
 </body>
 </html>
