--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,10 @@
 ---
 layout: main
 ---
-	<div class="post section">
-		<div class="post-header">
-			<h1>{{ page.title }}</h1>
-			<span class="date">{{ page.date | date: "%B %d, %Y" }}</span>
-		</div>
+	<div class="post posts">
+		<h2>{{ page.title }}</h2>
+		<h4>{{ page.sub-title }}</h4>
+		<span class="date">{{ page.date | date: "%B %d, %Y" }}</span>
 		<div class="post-text">
 		{{ content }}
 		</div>
