added underline to h1 h2 on home. and added summary to sub-title in post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: main
 ---
 	<div class="post posts">
 		<h2>{{ page.title }}</h2>
-		<h4>{{ page.sub-title }}</h4>
+		<h4 class="summary">{{ page.sub-title }}</h4>
 		<span class="date">{{ page.date | date: "%B %d, %Y" }}</span>
 		<div class="post-text">
 		{{ content }}
