--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: main
 ---
 	<div class="post posts">
-		<h2>{{ page.title }}</h2>
-		<h4 class="summary">{{ page.sub-title }}</h4>
+		<h1>{{ page.title }}</h1>
+		<h4>{{ page.sub-title }}</h4>
 		<span class="date">{{ page.date | date: "%B %d, %Y" }}</span>
 		<div class="post-text">
 		{{ content }}
