Added header footer and style changes. Moved armchair ceo out of the limelight. Changed links for new system of markingdown links.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,14 @@
 	<script type="text/javascript" src="/scripts/links.js" charset="utf-8"></script>
 </head>
 <body>
-	<div id="header"></div>
+	<div id="header">
+		<ul id="nav">
+			<li><a href="http://www.drewfranklin.com/">www</a></li>
+			<li><a href="http://drewfranklin.tumblr.com/">journal</a></li>
+			<li><a href="http://twitter.com/drewfranklin/">status</a></li>
+			<li><a href="http://drewfranklin.bandcamp.com/">music</a></li>
+		</ul>
+	</div>
 	{{ content }}
 	<a href="http://github.com/drewfranklin"><img style="position: absolute;top: 0;right: 0;border: 0;" src="/images/forkme_right_darkblue.png" alt="Fork me on GitHub"></a>
 </body>
