--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,4 +4,9 @@ layout: default
 	<div id="main">
 	{{ content }}
 	</div>
-	<div id="footer"></div>
+	<div id="footer">
+		<p>All content is released under the <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/us/">Creative Commons BY-NC License</a>.</p>
+		<p>Here are the <a href="http://www.flickr.com/photos/drewfranklin" title="Flickr">photos</a> I take, the music I <a href="http://www.last.fm/user/drewfranklin" title="Last.fm">listen</a> to, and the <a href="http://delicious.com/drewtfranklin" title="Delicious">links</a> I post.</p>
+		<p>If you are at all curious about my methodology for how I</p>
+		<p>tackle the internet (you aren't) please read this</p>
+	</div>
