--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
-"http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>{{ page.title }}</title>
-	<meta name="author" content="Drew Franklin">
-	<link href="http://feeds.feedburner.com/drewfranklin/github" rel="alternate" title="Drew Franklin Geeks Out" type="application/atom+xml">
-	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection">
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
-	<script type="text/javascript" src="/scripts/links.js" charset="utf-8"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>{{ page.title }}</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
+  <meta name="author" content="Drew Franklin">
+  <link href="http://feeds.feedburner.com/drewfranklin/github" rel="alternate" title="Drew Franklin Geeks Out" type="application/atom+xml">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+	
+  <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
 	<div id="header">
@@ -20,6 +23,9 @@
 		</ul>
 	</div>
 	{{ content }}
-	<a href="http://github.com/drewfranklin"><img style="position: absolute;top: 0;right: 0;border: 0;" src="/images/forkme_right_darkblue.png" alt="Fork me on GitHub"></a>
+	<a href="http://github.com/drewfranklin"><img style="position: absolute;top: 0;right: 0;border: 0;" src="/img/forkme_right_darkblue.png" alt="Fork me on GitHub"></a>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="/scripts/links.js"></script>
 </body>
 </html>
