--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,24 +1,12 @@
 html {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
-	font-size: 16px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 100%;
 	line-height: 1.125em;
 	color: rgb(34, 34, 34);
-}
-
-strong {
-	font-weight: bold; 
-}
-
-em {
-	font-style: italic; 
-}
-
-input, button, textarea {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
+	background-color: #A00C0C;
 }
 
 /* LINKS */
-
 a {
 	font-weight: bold;
 	color: rgb(34, 34, 34);
@@ -70,7 +58,6 @@ a:hover {
 
 #header {
 	height: 100px;
-	background-color: #A00C0C;
 }
 
 h2 {
@@ -79,7 +66,6 @@ h2 {
 
 #footer {
 	padding: 30px 0;
-	background-color: rgb(18, 22, 33);
 	text-align: center;
 	color: #999;
 }
@@ -245,4 +231,3 @@ h2 {
   padding-top: 0;
   padding-left: 0;
 }
-
