--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,8 @@
   <meta name="viewport" content="width=device-width">
   <meta name="author" content="Drew Franklin">
   <link href="http://feeds.feedburner.com/drewfranklin/github" rel="alternate" title="Drew Franklin Geeks Out" type="application/atom+xml">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-	
+  <link rel="stylesheet" href="/css/main.css">
+
   <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
@@ -23,6 +22,10 @@
 		</ul>
 	</div>
 	{{ content }}
+  <div id="footer" class="home">
+  	<p>All content is released under the <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/us/">Creative Commons BY-NC License</a>.</p>
+  	<p>Here are the <a href="http://www.flickr.com/photos/drewfranklin" title="Flickr">photos</a> I take, the music I <a href="http://www.last.fm/user/drewfranklin" title="Last.fm">listen</a> to, and the <a href="http://delicious.com/drewtfranklin" title="Delicious">links</a> I post.</p>
+  </div>
 	<a href="http://github.com/drewfranklin"><img style="position: absolute;top: 0;right: 0;border: 0;" src="/img/forkme_right_darkblue.png" alt="Fork me on GitHub"></a>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/js/vendor/jquery.min.js"><\/script>')</script>
