--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,9 @@
 			<li><a href="http://drewfranklin.bandcamp.com/">music</a></li>
 		</ul>
 	</div>
-	{{ content }}
+  <div id="main" class="{{ page.class }}">
+  	{{ content }}
+  </div>
   <div id="footer" class="home">
   	<p>All content is released under the <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/us/">Creative Commons BY-NC License</a>.</p>
   	<p>Here are the <a href="http://www.flickr.com/photos/drewfranklin" title="Flickr">photos</a> I take, the music I <a href="http://www.last.fm/user/drewfranklin" title="Last.fm">listen</a> to, and the <a href="http://delicious.com/drewtfranklin" title="Delicious">links</a> I post.</p>
