Added page description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{{ page.title }}</title>
-  <meta name="description" content="">
+  <meta name="description" content="{{ page.description }}">
   <meta name="viewport" content="width=device-width">
   <meta name="author" content="Drew Franklin">
   <link href="http://feeds.feedburner.com/drewfranklin/github" rel="alternate" title="Drew Franklin Geeks Out" type="application/atom+xml">
