Updates and Jquery removal

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -121,7 +121,9 @@ h2 {
 
 
 /* HOME */
-
+#main.home {
+	background: #A00C0C;
+}
 #main.home h1  a, #main.home h2 a {
 	color: #FFF;
 	text-decoration: none;
