--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>{{ page.title }}</title>
   <meta name="description" content="{{ page.description }}">
-  <meta name="viewport" content="width=device-width">
-  <meta name="author" content="Drew Franklin">
-  <link href="http://feeds.feedburner.com/drewfranklin/github" rel="alternate" title="Drew Franklin Geeks Out" type="application/atom+xml">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="/atom.xml" rel="alternate" title="Drew Franklin Geeks Out" type="application/atom+xml">
   <link rel="stylesheet" href="/css/main.css">
 
   <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
@@ -18,7 +17,6 @@
 			<li><a href="http://www.drewfranklin.com/">www</a></li>
 			<li><a href="http://drewfranklin.tumblr.com/">journal</a></li>
 			<li><a href="http://twitter.com/drewfranklin/">status</a></li>
-			<li><a href="http://drewfranklin.bandcamp.com/">music</a></li>
 		</ul>
 	</div>
   <div id="main" class="{{ page.class }}">
@@ -26,11 +24,8 @@
   </div>
   <div id="footer" class="home">
   	<p>All content is released under the <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/us/">Creative Commons BY-NC License</a>.</p>
-  	<p>Here are the <a href="http://www.flickr.com/photos/drewfranklin" title="Flickr">photos</a> I take, the music I <a href="http://www.last.fm/user/drewfranklin" title="Last.fm">listen</a> to, and the <a href="http://delicious.com/drewtfranklin" title="Delicious">links</a> I post.</p>
+  	<p>Here are the <a href="https://instagram.com/drewfranklin/" title="Instagram">photos</a> I take, the music I <a href="http://www.last.fm/user/drewfranklin" title="Last.fm">listen</a> to, and the <a href="https://pinboard.in/u:drewf" title="Pinboard.in">links</a> I post.</p>
   </div>
-	<a href="http://github.com/drewfranklin"><img style="position: absolute;top: 0;right: 0;border: 0;" src="/img/forkme_right_darkblue.png" alt="Fork me on GitHub"></a>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="/scripts/links.js"></script>
+	<!--<a href="http://github.com/drewfranklin"><img style="position: absolute;top: 0;right: 0;border: 0;" src="/img/forkme_right_darkblue.png" alt="Fork me on GitHub"></a>-->
 </body>
 </html>
