--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,14 @@
 layout: default
 class: post-page
 ---
-	<div class="post posts">
-		<h1>{{ page.title }}</h1>
-		<span class="date">{{ page.date | date: "%B %d, %Y" }}</span>
-		<div class="post-text">
-		{{ content }}
+	<article>
+		<div class="content">
+			<header>
+				<h1>{{ page.title }}</h1>
+			</header>
+			{{ content }}
+			<footer>
+				<span class="date">{{ page.date | date: "%B %d, %Y" }}</span>
+			</footer>
 		</div>
-	</div>
+	</article>
