--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-	<header>
+	<header role="banner">
     <nav role="navigation">
   		<ul class="site-links">
   			<li><a href="http://www.drewfranklin.com/">www</a></li>
