--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,5 +1,5 @@
 html {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "freight-text-pro-1","freight-text-pro-2", Georgia, "Times New Roman", serif;
 	font-size: 100%;
 	line-height: 1.125em;
 	color: rgb(34, 34, 34);
