Remove Link From Header and Fix index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,8 @@
 	<header role="banner">
 		<nav role="navigation">
 			<ul class="site-links">
-				<li><a href="http://www.drewfranklin.com/">www</a></li>
-				<li><a href="http://drewfranklin.tumblr.com/">journal</a></li>
-				<li><a href="http://twitter.com/drewfranklin/">status</a></li>
+				<li><a href="http://drewfranklin.tumblr.com">journal</a></li>
+				<li><a href="http://twitter.com/drewfranklin">status</a></li>
 			</ul>
 	</header>
 	<main role="main" class="{{ page.class }}">
