fixes updates and style tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,11 +23,15 @@
 </head>
 <body>
 	<header role="banner">
+		<a href="/" class="wordmark">
+			<h1>Franklin</h1>
+		</a>
 		<nav role="navigation">
 			<ul class="site-links">
 				<li><a href="http://drewfranklin.tumblr.com">journal</a></li>
 				<li><a href="http://twitter.com/drewfranklin">status</a></li>
 			</ul>
+		</nav>
 	</header>
 	<main role="main" class="{{ page.class }}">
 		{{ content }}
